js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-not-extensible-args.js
DONOTEVALUATE
(
)
;
label
:
{
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
;
